<resources>
    <string name="app_title">LoftMoney</string>
    <string name="titleHint">Title</string>
    <string name="priceHint">Price</string>
    <string name="addButtonText">Add</string>
    <string name="currencyRuble">%1$s ₽</string>
    <string name="budgetTitle">Budget accounting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="outcome">Expense</string>
    <string name="income">Income</string>
    <string name="remove_title">Delete</string>
    <string name="finances">Available finance</string>
    <string name="remove_conf">Are you sure you want to delete the selected items?</string>
    <string name="selected">Select</string>
    <string name="enterButtonTitle">Enter</string>
    <string name="balance">Balance</string>
</resources>
