<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/addButton"
        android:orientation="vertical"
        android:paddingBottom="@dimen/itemBottom"
        android:paddingStart="@dimen/itemStart"
        android:paddingEnd="@dimen/itemEnd"
        >


        <EditText
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titleHint"
            android:inputType="text"
            android:textSize="@dimen/titleTextSize"
            android:textColor="@color/titleTextColor"
            />

        <EditText
            android:id="@+id/priceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priceHint"
            android:inputType="number"
            android:textSize="@dimen/priceTextSize"
            android:layout_marginTop="@dimen/marginTop"
            android:textColor="@color/titleTextColor"
            />

    </LinearLayout>

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="center"
            android:textColor="@color/addButtonColorInactive"
            android:text="@string/addButtonText"
            />

</RelativeLayout>